tests/toy/neg/001537_mutation.toylang
program a = { var then a : bool; } .
